--- a/src/TemplateProject.Core/TemplateProject.Core.csproj
+++ b/src/TemplateProject.Core/TemplateProject.Core.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta07" />
       <PackageReference Include="Serilog" Version="2.12.0" />
     </ItemGroup>
