[Draft] Add MongoDb

--- a/src/TemplateProject.Api/appsettings.json
+++ b/src/TemplateProject.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DatabaseContext": "Server=localhost;Port=5432;Database=TemplateProjectDb;User Id=postgres;Password=YOUR_PASSWORD;"
   },
+  "MongoDatabaseOptions": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "TemplateProjectDb",
+    "UserNotesCollectionName": "UserNotes"
+  },
   "AuthOptions": {
     "Issuer": "localhost",
     "Audience": "localhost",
