--- a/src/TemplateProject.Core/TemplateProject.Core.csproj
+++ b/src/TemplateProject.Core/TemplateProject.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="MongoDB.Bson" Version="2.23.1" />
       <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta07" />
       <PackageReference Include="Serilog" Version="3.1.1" />
     </ItemGroup>
