--- a/src/TemplateProject.DataAccess/TemplateProject.DataAccess.csproj
+++ b/src/TemplateProject.DataAccess/TemplateProject.DataAccess.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+      <PackageReference Include="MongoDB.EntityFrameworkCore" Version="7.0.0-preview.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     </ItemGroup>
 
