--- a/src/TemplateProject.Api/TemplateProject.Api.csproj
+++ b/src/TemplateProject.Api/TemplateProject.Api.csproj
@@ -17,6 +17,13 @@
       </PackageReference>
       <PackageReference Include="Serilog" Version="4.0.1" />
       <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+      <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="2.1.1" />
+      <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+      <PackageReference Include="Serilog.Enrichers.MessageTemplate" Version="1.0.1" />
+      <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+      <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+      <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
     </ItemGroup>
