--- a/src/TemplateProject.Api/appsettings.json
+++ b/src/TemplateProject.Api/appsettings.json
@@ -22,7 +22,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Microsoft.AspNetCore": "Warning"
+    },
+    "Seq": {
+      "Enabled": false,
+      "ServerUrl": "",
+      "ApiKey": ""
     }
   },
   "AllowedHosts": "*"
